--- a/README
+++ b/README
@@ -20,5 +20,5 @@ Simply asks one question and click to see the answer.
 - [ ] toggle the flashcard between the question side and the answer side
 - [ ] Style the question and answer side of the card to better distinguish between the two sides
 - [ ] Add selectable multiple choice answers beneath the card
-   - [ ] Change the background color of the multiple choice answers when clicked to indicate whether the question waanswered correctly
+- [ ] Change the background color of the multiple choice answers when clicked to indicate whether the question answered correctly
 - [ ] Further customize and style the card
